@@ -1,4 +1,5 @@
-  - fix handling of simple-math-operators inside modifiers(Dominik, messju)
+  - fix handling if [...] inside triple-quotes in config-files (messju)
+  - fix handling of simple-math-operators inside modifiers (Dominik, messju)
   - fix handling of trailing-slashes in open_basedir in
     smarty_core_create_dir_structure() (packman, messju)
 
